--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -31,9 +31,9 @@ header div#menu {
 }
 
 div#menu img {
-    width: 40%;
-    max-width: 180px;
-    margin-right: 30px;
+    flex: 0 1 100px;
+    margin-right: 10px;
+    align-self: flex-start;
 }
 
 nav#navegacao {
@@ -63,7 +63,7 @@ ul#lista {
     font-size: 1.5em;
     text-decoration: none;
     color: black;
-    line-height: 1.3em;
+    line-height: 2em;
 }
 
 #lista > li > a:hover {
@@ -80,7 +80,9 @@ header a#botao {
     border-radius: 30px;
     padding: 20px;
     transition: background-color 0.3s;
-    margin-left: 30px;
+    margin-left: 10px;
+    flex: 0 1 200px;
+    align-self: flex-start;
 }
 
 header a#botao:hover {
