--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -33,7 +33,6 @@ header div#menu {
 
 div#menu img {
     flex: 0 1 100px;
-    margin-right: 10px;
     align-self: flex-start;
 }
 
@@ -65,10 +64,13 @@ ul#lista {
     text-decoration: none;
     color: black;
     line-height: 2em;
+    border-radius: 10px;
+    transition: background-color 0.2s ease;
 }
 
 #lista > li > a:hover {
     text-decoration: underline;
+    background-color: lightgrey;
 }
 
 #lista.aberto {
@@ -86,7 +88,6 @@ header a.botao {
     border-radius: 30px;
     padding: 20px;
     transition: background-color 0.3s;
-    margin-left: 10px;
     flex: 0 1 200px;
     align-self: flex-start;
 }
